# catalyst

./: .dockerignore  .gitignore  DASHBOARD-SCHEMA.md  DEPLOY-PROVIDER.md  Dockerfile  HOSTING.md  README.md  hyperliquid_universe.json  news-crypto-blue-sky.txt  plan.md  protocols.json  pyproject.toml  railway.toml  sources.json  weights.json
catalyst/: __init__.py  alerts.py  backtest.py  bluesky.py  calibrate.py  cli.py  compare.py  croo_agent.py  dedupe.py  defillama.py  derivs.py  enrich.py  exchanges.py  flows.py  hl_events.py  learning.py  macro.py  market.py  models.py  monitoring.py  monitors.py  onchain.py  onchain_actions.py  payload.py  pg.py  pipeline.py  planner.py  predictions.py  present.py  prices.py  protocols.py  rss.py  signals.py  snapshot.py  store.py  telegram.py  trend.py  tune.py
scripts/: croo_smoke_requester.py  migrate_to_pg.py
supabase/: config.toml  poll_cron.sql
tests/: test_alerts.py  test_backtest.py  test_bluesky.py  test_calibrate.py  test_compare.py  test_croo_agent.py  test_dedupe.py  test_defillama.py  test_derivs.py  test_enrich.py  test_events.py  test_exchanges.py  test_export.py  test_flows.py  test_history.py  test_hl_events.py  test_learning.py  test_macro.py  test_market.py  test_monitoring.py  test_monitors.py  test_onchain.py  test_onchain_actions.py  test_payload.py  test_pipeline.py  test_planner.py  test_poll.py  test_predictions.py  test_present.py  test_prices.py  test_protocols.py  test_rss.py  test_signals.py  test_snapshot.py  test_store.py  test_telegram.py  test_trend.py  test_tune.py  test_tuning.py
(+10 files in other folders)
